--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
 {% extends 'base.html' %}
 {% block content %}
-<h1>Войти</h1>
+<h1>Вход</h1>
 <form method="POST">
-    <div class="form-group">
-        <label for="username">Имя пользователя</label>
-        <input type="text" class="form-control" id="username" name="username" required>
-    </div>
-    <div class="form-group">
-        <label for="password">Пароль</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+  <div class="form-group">
+    <label for="username">Имя пользователя:</label>
+    <input type="text" class="form-control" id="username" name="username" required>
+  </div>
+  <div class="form-group">
+    <label for="password">Пароль:</label>
+    <input type="password" class="form-control" id="password" name="password" required>
+  </div>
+  <button type="submit" class="btn btn-primary">Войти</button>
 </form>
 {% endblock %}
+
